--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=capaRepositorio
-spring.datasource.url= jdbc:postgresql://localhost:5433/reservasDB
-spring.datasource.username= dania
-spring.datasource.password= 123456
+spring.datasource.url= jdbc:postgresql://localhost:5432/flight_reservations_db
+spring.datasource.username= postgres
+spring.datasource.password= password
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
